[gd_scene load_steps=3 format=3 uid="uid://da4t081ek2mt"]

[ext_resource type="Script" path="res://Menu/Multiplayer/Join/join_game.gd" id="1_mvyja"]

[sub_resource type="GDScript" id="GDScript_iesac"]
script/source = "extends LineEdit


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="JoinGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mvyja")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -29.0
offset_right = 82.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 13

[node name="IPAddressContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="IPAddressLabel" type="Label" parent="VBoxContainer/IPAddressContainer"]
layout_mode = 2
text = "IP address"

[node name="IPAddressLineEdit" type="LineEdit" parent="VBoxContainer/IPAddressContainer"]
unique_name_in_owner = true
layout_mode = 2
max_length = 20
clear_button_enabled = true
script = SubResource("GDScript_iesac")

[node name="JoinButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Join game"

[node name="BackButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../JoinButton")
focus_previous = NodePath("../JoinButton")
text = "Back"

[connection signal="text_changed" from="VBoxContainer/IPAddressContainer/IPAddressLineEdit" to="." method="_on_ip_address_line_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
